# advent-of-code

./: .clang-format  .gitignore  Makefile  aoc.py  common.h  config.h.in  day10.py  day12.py  day15.py  day18.py  day20.py  day21.py  day23.py  day25.py  day3.py  day4.py  day5.py  day6.S  day8.py  day9.py  dense_map.h  dense_set.h  getinput.py  main.cc  md5.h  meson-warning-flags.txt  meson.build  meson_options.txt  skeleton.py
2015/: 1.cc  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  17.cc  18.cc  19.cc  2.cc  20.cc  21.cc  22.cc  23.cc  24.cc  25.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc
2016/: 1.cc  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  17.cc  18.cc  19.cc  2.cc  20.cc  21.cc  22.cc  23.cc  24.cc  25.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc  assembunny.h
2017/: 1.cc  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  17.cc  18.cc  19.cc  2.cc  20.cc  21.cc  22.cc  23.cc  24.cc  25.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc  knot_hash.h
2018/: 1.cc  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  17.cc  18.cc  19.cc  2.cc  20.cc  21.cc  22.cc  23.cc  24.cc  25.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc  vm.h
2019/: 1.cc  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  17.cc  18.cc  19.cc  2.cc  20.cc  21.cc  22.cc  23.cc  24.cc  25.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc  intcode.h
2020/: 1.cc  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  17.cc  18.cc  19.cc  2.cc  20.cc  21.cc  22.cc  23.cc  24.cc  25.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc
2021/: 1.S  1.cc  1.py  10.cc  11.cc  11.py  12.cc  13.cc  13.py  14.cc  14.py  15.cc  16.cc  16.py  17.cc  17.py  18.cc  19.cc  19.py  2.S  2.cc  2.py  20.cc  21.cc  22.cc  22.py  23.cc  23.py  24.cc  24.py  25.cc  3.cc  4.cc  5.cc  6.cc  6.py  7.cc  7.py  8.cc  9.cc
2022/: .gitignore  1.cc  10.cc  10.py  11.cc  11.py  12.cc  12.py  13.cc  13.py  14.cc  14.zig  15.cc  16.cc  17.cc  17.py  18.cc  18.py  19.cc  19.py  2.cc  2.py  20.cc  21.cc  22.cc  23.cc  24.cc  24.py  25.cc  3.cc  4.cc  5-input.cpp  5.cc  5.cpp  6.cc  7.cc  8.cc  8.py  9.cc  Makefile
2023/: 1.cc  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  17.cc  18.cc  19.cc  2.cc  20.cc  21.cc  22.cc  23.cc  24.cc  25.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc
2024/: 1.cc  1.clj  1.py  10.cc  10.clj  10.py  11.cc  11.clj  11.py  12.cc  12.py  13.cc  13.py  14.cc  14.py  15.cc  15.py  16.cc  16.py  17.cc  17.py  18.cc  18.py  19.cc  19.py  2.cc  2.clj  2.py  20.cc  20.py  21.py  22.cc  22.py  23.cc  23.py  24.py  25.cc  25.py  3.cc  3.clj  (+15 more)
2025/: 1.cc  10.cc  11.cc  12.cc  2.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc
attic/: highly-abundant-numbers.cc  meson-debug  meson-release  setup-build-ramfs  slow-problems
include/: bitmanip.h  common.h  dense_map.h  dense_set.h  inplace_vector.h  macros.h  md5.h  monotonic_bucket_queue.h  small_vector.h  thread_pool.h  uint256.h
polyglot/: .gitignore  Makefile  day1.exs  day10.js  day14.zig  day2.pl  day3.s  day4.sh  day5.cpp  day6.c  day7.awk  day9.cr  day9.hs
speedrun/: day1.py  day13.py  day14.py  day15.py  day20.py  day21.py  day22.py  day23.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day9.py
subprojects/: .gitignore  libhwy.wrap
tests/: small_vector.cc  test_bitmanip.cc  test_fork_pool.cc
